# Test_Xerces_XPath

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
TestXercesXpathFeatures/: CMakeLists.txt  TestXercesXpathFeatures.cpp  TestXercesXpathFeatures.h
lib/: CMakeLists.txt
lib/xerces-c-3.2.2/: CMakeLists.txt
lib/xerces-c-3.2.2/samples/data/: personal-schema-invald.xml  personal-schema-noxsd.xml
lib/xerces-c-3.2.2/samples/src/DOMPrint/: DOMPrint.cpp
resource/: sample.xml  simpleBookstore.xml
